fix for page jumping when switch tabs

--- a/style.css
+++ b/style.css
@@ -397,7 +397,7 @@ select {
 }
 
 #ActionSlots {
-    padding: 10px 20px 0;
+    padding: 10px 10px 0 20px;
     width: 100%;
     max-width: 1200px;
 }
